@@ -435,6 +435,9 @@ BUGFIXES:
   ZOOKEEPER-1774. QuorumPeerMainTest fails consistently with
   "complains about host" assertion failure (phunt)
 
+  ZOOKEEPER-877. zkpython does not work with python3.1
+  (Daniel Enman via phunt)
+
 IMPROVEMENTS:
 
   ZOOKEEPER-1170. Fix compiler (eclipse) warnings: unused imports,
